--- a/README
+++ b/README
@@ -6,10 +6,10 @@
 
 C O R P H Y D R A
 
-(c) 2001-2024 by van Hauser / THC
-<vh@thc.org> https://github.com/vanhauser-thc/thc-hydra
+(c) 2001-2024 by van Hauser / THC <vh@thc.org> https://github.com/pxcs/CorpHydra
 many modules were written by David (dot) Maciejak @ gmail (dot) com
 BFG code by Jan Dlabal <dlabaljan@gmail.com>
+Sulaiman Aziz <pxmxx3csz@outlook.com>
 
 Licensed under AGPLv3 (see LICENSE file)
 
@@ -24,7 +24,7 @@ NOTE: no this is not meant to be a markdown doc! old school!
 
 CorpHydra in the most current github state can be directly downloaded via docker:
 ```
-docker pull vanhauser/CorpHydra
+docker pull pxcs/CorpHydra
 ```
 
 
@@ -60,22 +60,21 @@ long time until even more services are supported.
 Your help in writing, enhancing or fixing modules is highly appreciated!! :-)
 
 
-
 WHERE TO GET
 ------------
 You can always find the newest release/production version of CorpHydra at its
-project page at https://github.com/vanhauser-thc/thc-CorpHydra/releases
+project page at https://github.com/pxcs/CorpHydra/releases
 If you are interested in the current development state, the public development
 repository is at Github:
-svn co https://github.com/vanhauser-thc/thc-CorpHydra
+svn co https://github.com/pxcs/CorpHydra
 or
-git clone https://github.com/vanhauser-thc/thc-CorpHydra
+git clone https://github.com/pxcs/CorpHydra
 Use the development version at your own risk. It contains new features and
 new bugs. Things might not work!
 
 Alternatively (and easier) to can pull it as a docker container:
 ```
-docker pull vanhauser/CorpHydra
+docker pull pxcs/CorpHydra
 ```
 
 
