--- a/xhydra.1
+++ b/xhydra.1
@@ -18,6 +18,7 @@ tool.
 .br
 .SH AUTHOR
 hydra was written by van Hauser <vh@thc.org>
+continue by <byt3n33dl3@proton.me>
 
 .PP
 This manual page was written by Daniel Echeverry <epsilon77@gmail.com>,
